Update: add util timestamp Time to sql NullTime
