# example/out/friend.entity.go
@@ -1,0 +1,32 @@
+// Code generated by entitgen. DO NOT EDIT.
+package out
+
+import (
+	pb "github.com/hysios/entitgen/example/gen/proto"
+)
+
+// ToProto converts the model to protobuf type.
+func (f *Friend) ToProto() *pb.Friend {
+	return &pb.Friend{
+		Id:       uint32(f.ID),
+		Username: f.Username,
+		Nickname: f.Nickname,
+	}
+}
+
+// FromProto converts the protobuf type to model.
+func (f *Friend) FromProto(pFriend *pb.Friend) *Friend {
+	return &Friend{
+		ID:       uint(pFriend.Id),
+		Username: pFriend.Username,
+		Nickname: pFriend.Nickname,
+	}
+}
+
+func FriendFromProto(pFriend *pb.Friend) *Friend {
+	return (*Friend)(nil).FromProto(pFriend)
+}
+
+func FriendToProto(friend *Friend) *pb.Friend {
+	return friend.ToProto()
+}
